prisma working in docker finally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   db:
-    image: 'postgres:16.1-alpine3.18'
+    image: 'postgres:15'
     volumes:
       - 'db:/var/lib/postgresql/data'
     ports:
@@ -12,31 +12,39 @@ services:
       - POSTGRES_USER=bitly_clone
       - POSTGRES_PASSWORD=password
 
-  api:
+  # api:
+  #   depends_on:
+  #     - 'db'
+  #   build: .
+  #   ports:
+  #     - '3001:3001' #host:container
+  #   volumes:
+  #     - ./:/usr/src/app
+  #   command: bash -c "node index.js"
+  #   # command: bash -c "npm install -g nodemon && yarn install && nodemon --inspect=0.0.0.0:9222 index.js"
+  #   environment:
+  #     # WEB SERVER
+  #     - NODE_ENV=local
+  #     - PORT=3001
+  #     # DATABASE
+  #     - DATABASE_URL=postgres://bitly_clone:password@db:5432/bitly_clone
+  link_tracker:
     depends_on:
       - 'db'
-      - 'redis'
-    build: .
+    build:
+      context: ./link_tracker
+      dockerfile: Dockerfile.dev
     ports:
       - '3001:3001' #host:container
-      - '9222:9222' #debugger port
     volumes:
-      - ./:/usr/src/app
-    command: bash -c "node index.js"
-    # command: bash -c "npm install -g nodemon && yarn install && nodemon --inspect=0.0.0.0:9222 index.js"
+      - ./link_tracker:/app
+    command: bash -c "pnpm install && npx prisma generate && pnpm run dev"
     environment:
       # WEB SERVER
       - NODE_ENV=local
       - PORT=3001
-      # CACHE
-      - REDIS_URL=redis://redis
-      # DATABASEdoc
-      - DATABASE_URL=postgres://bitly_clone:password@db:5432/bitly_clone
-
-  redis:
-    image: 'redis/redis-stack'
-    ports:
-      - '8001:8001' #host:container
+      # DATABASE
+      - DATABASE_URL=postgres://bitly_clone:password@db:5432/bitly_clone?connect_timeout=300
 
 volumes:
   db:
