--- a/api/package.json
+++ b/api/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "bitly_clone__link_tracker",
+  "name": "bitly_clone__backend",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "5.6.0",
     "cookie-parser": "^1.4.6",
+    "dot-env": "^0.0.1",
     "express": "4.18.2",
     "morgan": "^1.10.0"
   },
