--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,22 +12,25 @@ services:
       - POSTGRES_USER=bitly_clone
       - POSTGRES_PASSWORD=password
 
-  # api:
-  #   depends_on:
-  #     - 'db'
-  #   build: .
-  #   ports:
-  #     - '3001:3001' #host:container
-  #   volumes:
-  #     - ./:/usr/src/app
-  #   command: bash -c "node index.js"
-  #   # command: bash -c "npm install -g nodemon && yarn install && nodemon --inspect=0.0.0.0:9222 index.js"
-  #   environment:
-  #     # WEB SERVER
-  #     - NODE_ENV=local
-  #     - PORT=3001
-  #     # DATABASE
-  #     - DATABASE_URL=postgres://bitly_clone:password@db:5432/bitly_clone
+  api:
+    depends_on:
+      - 'db'
+    build:
+      context: ./api
+      dockerfile: Dockerfile.dev
+    ports:
+      - '5000:5000' #host:container
+    volumes:
+      - ./api:/app
+    command: bash -c "pnpm install && npx prisma generate && pnpm run dev"
+    environment:
+      # WEB SERVER
+      - NODE_ENV=local
+      - PORT=5000
+      # DATABASE
+      - DATABASE_URL=postgres://bitly_clone:password@db:5432/bitly_clone
+      # LINK TRACKER APP(REDIRECTIONS)
+      - SHORT_LINKS_BASE_URL=http://localhost:8000
   link_tracker:
     depends_on:
       - 'db'
@@ -35,16 +38,16 @@ services:
       context: ./link_tracker
       dockerfile: Dockerfile.dev
     ports:
-      - '3001:3001' #host:container
+      - '8000:8000' #host:container
     volumes:
       - ./link_tracker:/app
     command: bash -c "pnpm install && npx prisma generate && pnpm run dev"
     environment:
       # WEB SERVER
       - NODE_ENV=local
-      - PORT=3001
+      - PORT=8000
       # DATABASE
-      - DATABASE_URL=postgres://bitly_clone:password@db:5432/bitly_clone?connect_timeout=300
+      - DATABASE_URL=postgres://bitly_clone:password@db:5432/bitly_clone
 
 volumes:
   db:
